openmetadata-docs/content/v1.2.x/how-to-guides/admin-guide/teams-and-users/change-team-type.md
---
title: How to Change the Team Type
slug: /how-to-guides/admin-guide/teams-and-users/change-team-type
---

# How to Change the Team Type

Refer to the [**Team Structure in OpenMetadata**](/how-to-guides/admin-guide/teams-and-users/team-structure-openmetadata) to get a clear understanding of the various **Team Types**.

Let's say you have a team `Cloud_Infra` of the type **`Department`** and you want to change it to the type **`BusinessUnit`**. You can easily change that through the UI.

**1.** Navigate to **Settings >> Teams**. Click on the `Cloud_Infra` team name to view the details.

{% image
src="/images/v1.2/how-to-guides/teams-and-users/change-team1.png"
alt="Cloud_Infra Team"
caption="Click on the Team Name"
/%}

**2.** On the `Cloud_Infra` team details page, you will see the `Type - Department` with an edit icon.

{% image
src="/images/v1.2/how-to-guides/teams-and-users/change-team2.png"
alt="Type - Department"
caption="Edit Team Type"
/%}

**3.** Click on the edit button. You will get a set of options, from which you can select `BusinessUnit`.Click on ✅ to save it.

{% image
src="/images/v1.2/how-to-guides/teams-and-users/change-team3.png"
alt="select-team-type"
caption="Select the Required Team Type"
/%}

**4.** This changes the `Cloud_Infra` team type from `Department` to `BusinessUnit`.
