openmetadata-docs/content/v1.5.x/how-to-guides/admin-guide/teams-and-users/change-team-type.md
---
title: How to Change the Team Type
slug: /how-to-guides/admin-guide/teams-and-users/change-team-type
---

# How to Change the Team Type

Refer to the [**Team Structure in OpenMetadata**](/how-to-guides/admin-guide/teams-and-users/team-structure-openmetadata) to get a clear understanding of the various **Team Types**.

Let's say you have a team `Digital_Marketing` of the type **`Department`** and you want to change it to the type **`Division`**. You can easily change that through the UI.

**1.** Navigate to **Settings >> Team & User Management >> Teams**. Click on the `Digital_Marketing` team name to view the details.

{% image
src="/images/v1.5/how-to-guides/teams-and-users/add-user3.png"
alt="Team & User Management"
caption="Team & User Management"
/%}

{% image
src="/images/v1.5/how-to-guides/teams-and-users/add-user3.1.png"
alt="Teams"
caption="Teams"
/%}

{% image
src="/images/v1.5/how-to-guides/teams-and-users/change-team1.png"
alt="Digital_Marketing Team"
caption="Click on the Team Name"
/%}

**2.** On the `Digital_Marketing` team details page, you will see the `Type - Department` with an edit icon.

{% image
src="/images/v1.5/how-to-guides/teams-and-users/change-team2.png"
alt="Type - Department"
caption="Edit Team Type"
/%}

**3.** Click on the edit button. You will get a set of options, from which you can select `Division`.Click on ✅ to save it.

{% image
src="/images/v1.5/how-to-guides/teams-and-users/change-team3.png"
alt="select-team-type"
caption="Select the Required Team Type"
/%}

**4.** This changes the `Digital_Marketing` team type from `Department` to `Division`.
